Add player healt on server
